# GRF_emulator

./: .gitignore  GRFCore.py  LICENSE  LineNumberWidget.py  Pipfile  README.md  TODO.md  autotest.py  call_gram.lark  def_gram.lark  def_gram.lark.bak  gram.lark  gui.py  inp.txt  interpreter.py  main.py  main.py.bak  old_GRFCore.py  pyproject.toml  requirements.txt  res.txt  shell.nix  test.py
examples/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt
experiments/: main.cpp  main.grf  main.hs  result.txt  timer.ipynb
grfemulator/: __main__.py
grfemulator/core/: __init__.py  __main__.py  lex_parce.py
grfemulator/core/grammars/: call_grammar.lark  def_grammar.lark  def_grammar.lark.backup
grfemulator/core/resources/: base_functions.grf
grfemulator/docs/: gh_md_converter.py  md_converter.py  test.html  test.md
grfemulator/gui/: LineNumberWidget.py  __init__.py  __main__.py  globalresources.py  help.html  help.md  highlighter.py  linewidget.py  md_converter.py  settings.py
grfemulator/gui/darkorange/: README  __init__.py  darkorange.py
grfemulator/gui/schemes/aqua/: __init__.py  aqua.py  aqua.qrc  compile_rcc.bash
grfemulator/gui/schemes/darkorange/: __init__.py  compile_rcc.bash  darkorange.qrc  darkorange.qss
tests/: autotest.py  autotest_lalr.py
