[project]
name = "grfemulator"
description = "Emulator of general recursive function"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["pyqt5", "lark"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
grfemulator = "grfemulator"

[tool.setuptools.package-data]
grfemulator = [
    "core/grammars/*.lark",
]
